--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -30,7 +30,7 @@
 
       <div class="portrait-title">
         <h2>{{ $person_page.Title }}</h2>
-        <h2>{{ "姜仲石"}}</h2>
+        <h2>{{ "李慧敏"}}</h2>
         {{ with $person.role }}<h3>{{ . | markdownify | emojify }}</h3>{{ end }}
 
         {{ range $person.organizations }}
